- Updated request body variable parser to also support regular expressions to insert part of request body in the response body (https://github.com/dukeofharen/httplaceholder/pull/296).
- An option was added to user the display URL variable parser with a regular expression, to parse only a part of the URL as part of your response (https://github.com/dukeofharen/httplaceholder/pull/297).

# BREAKING CHANGES
- If you use any of the pre-built binaries of HttPlaceholder, you won't notice anything with upgrading. If you use the .NET tool version of HttPlaceholder, you need to have [.NET 7](https://dotnet.microsoft.com/en-us/) installed from now on.

[2022.11.20]
- Updated loading of stubs from .yml files. An 'id' field should now ALWAYS be set, whereas it was automatically generated beforehand if it was not set (which caused some non stub files to get parsed as stub with weird behavior) (https://github.com/dukeofharen/httplaceholder/pull/284).
- Added CancellationToken support to .NET client (https://github.com/dukeofharen/httplaceholder/pull/284).
- Detect light or dark theme from the users browser when opening the user interface (https://github.com/dukeofharen/httplaceholder/pull/284).
- Lots of refactorings in the C# code base (https://github.com/dukeofharen/httplaceholder/pull/284).
- The loading ring in the UI is now visible in both light and dark themes in the UI (https://github.com/dukeofharen/httplaceholder/pull/284).
- Log application startup time (https://github.com/dukeofharen/httplaceholder/pull/285).
- Make it possible to update settings through API (only "storeResponses" for now) (https://github.com/dukeofharen/httplaceholder/pull/286).
- Added option to set "storeResponses" in UI (https://github.com/dukeofharen/httplaceholder/pull/286).
- Fixed bug where a lot of file watches were placed which were not necessary (https://github.com/dukeofharen/httplaceholder/pull/289).