@@ -12,7 +12,7 @@ public class StubConditionsModel
     ///     Gets or sets the method.
     /// </summary>
     [YamlMember(Alias = "method")]
-    public string Method { get; set; }
+    public object Method { get; set; }
 
     /// <summary>
     ///     Gets or sets the URL.
