@@ -111,6 +111,124 @@
 							]
 						},
 						{
+							"name": "0a. Methods",
+							"item": [
+								{
+									"name": "[Create stub] Stub with multiple methods",
+									"protocolProfileBehavior": {
+										"disabledSystemHeaders": {
+											"content-type": true
+										}
+									},
+									"request": {
+										"method": "POST",
+										"header": [
+											{
+												"key": "Content-Type",
+												"value": "text/yaml",
+												"type": "text"
+											}
+										],
+										"body": {
+											"mode": "raw",
+											"raw": "id: multiple-methods\ntenant: integration\nconditions:\n  method:\n    - GET\n    - POST\n  url:\n    path:\n      equals: /multiple-methods\nresponse:\n  text: OK MULTIPLE METHODS"
+										},
+										"url": {
+											"raw": "{{rootUrl}}ph-api/stubs",
+											"host": [
+												"{{rootUrl}}ph-api"
+											],
+											"path": [
+												"stubs"
+											]
+										}
+									},
+									"response": []
+								},
+								{
+									"name": "Test method GET",
+									"event": [
+										{
+											"listen": "test",
+											"script": {
+												"exec": [
+													"pm.test(\"Body is correct\", function () {",
+													"    pm.response.to.have.body(\"OK MULTIPLE METHODS\");",
+													"});"
+												],
+												"type": "text/javascript"
+											}
+										}
+									],
+									"request": {
+										"method": "GET",
+										"header": [],
+										"url": {
+											"raw": "{{rootUrl}}multiple-methods",
+											"host": [
+												"{{rootUrl}}multiple-methods"
+											]
+										}
+									},
+									"response": []
+								},
+								{
+									"name": "Test method POST",
+									"event": [
+										{
+											"listen": "test",
+											"script": {
+												"exec": [
+													"pm.test(\"Body is correct\", function () {",
+													"    pm.response.to.have.body(\"OK MULTIPLE METHODS\");",
+													"});"
+												],
+												"type": "text/javascript"
+											}
+										}
+									],
+									"request": {
+										"method": "POST",
+										"header": [],
+										"url": {
+											"raw": "{{rootUrl}}multiple-methods",
+											"host": [
+												"{{rootUrl}}multiple-methods"
+											]
+										}
+									},
+									"response": []
+								},
+								{
+									"name": "Test method PUT",
+									"event": [
+										{
+											"listen": "test",
+											"script": {
+												"exec": [
+													"pm.test(\"Body is correct\", function () {",
+													"    pm.response.to.have.body(\"OK FALLBACK\");",
+													"});"
+												],
+												"type": "text/javascript"
+											}
+										}
+									],
+									"request": {
+										"method": "PUT",
+										"header": [],
+										"url": {
+											"raw": "{{rootUrl}}multiple-methods",
+											"host": [
+												"{{rootUrl}}multiple-methods"
+											]
+										}
+									},
+									"response": []
+								}
+							]
+						},
+						{
 							"name": "1. Path",
 							"item": [
 								{
